[project]
name = "medicationresources"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fhir-resources>=8.1.0",
    "fhirpathpy>=2.1.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "notebook>=7.5.2",
    "pandas>=2.3.3",
    "requests>=2.32.5",
]
